master

2.36.2
- noface
  Per-board archivers can now be selected under the rice tab.  
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

2.36.1
- noface
  Archives now populate a submenu just like the quicklinks for the Filter.

2.36.0
- noface
  Updater should now check until own post is found.
  "Don't expand spoilers when using ImageExpand" should now work as expected and gets a new option.
  postContainer now adds a class 'hidden' when the stub is hidden.

2.35.9
- Mayhem
  Added thread creation QR cooldown.
  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
  Fix /q/ QR cooldowns.
- zixaphir
  Youtube Embedding
  Per board refresh intervals.
- noface
  Small Fixes.

2.35.8
- noface
  Don't break optional increase.

2.35.7
- noface
  It is now possible to set an interval.
  Add optional increase value for Updater which can be configured on the 'rice' tab.
- zixaphir
  Linkification
  Updater:
    - It is now possible to set a interval for background tabs.
    - Add optional increase value for Updater which can be configured on the 'rice' tab.

2.35.6
- noface
  Don't automatically expand spoilers when using Expand Images. 
- Mayhem
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.

2.35.5
- Mayhem
  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).

2.35.4
- Mayhem
  Fix 4chan Pass with QR on Firefox.

2.35.3
- Mayhem
  Add support for 4chan Pass.
  You can now use 'Enter' in keybind combinations.

2.35.2
- Mayhem
  Use 4chan's API to fetch posts for Thread Updater.
  Minor fixes.
- noface
  Break Quote Threading.

2.35.1
- Mayhem
  Temporary fix Scriptish.

2.35.0
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.
  Use 4chan's API to fetch posts for: